Noteworthy changes in version 1.0.3
------------------------------------------------

 
Noteworthy changes in version 1.0.2 (2007-07-04)
------------------------------------------------
 
 * Support for SHA-2.

 * Fixed a couple of memory leaks.

 * Experimental support for ECDSA.

 * Minor portability fixes.

 * Switched to GPLv3.


Noteworthy changes in version 1.0.1 (2006-11-29)
------------------------------------------------

 * Fixes for certificates lacking certain objects.

 * Fixes to allow building on systems with a broken ar.


Noteworthy changes in version 1.0.0 (2006-08-31)
------------------------------------------------

 * OCSP nonces are now checked to detect replay attacks.

 * OCSP extensions may no be retrieved.

 * Implemented ksba_ocsp_get_responder_id which used to always return
   an error code not_implemented.  Thus we can assume that the
   function has never been used and we don't need to see this as an
   API break.

 * Interface changes relative to the 0.9.16 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_ocsp_get_extension        NEW
 ksba_ocsp_get_responder_id     CHANGED: No ABI break.


Noteworthy changes in version 0.9.16 (2006-08-01)
-------------------------------------------------

 * Fixed a character set conversion bug in BMPStrings.

 * New function for better error reporting of DNs.

 * Interface changes relative to the 0.9.13 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_dn_teststr                NEW
 ksba_dn_str2der                NEW
 ksba_dn_der2str                NEW


Noteworthy changes in version 0.9.15 (2006-06-20)
-------------------------------------------------

 * Fixed BER parser which was broken in the last release.


Noteworthy changes in version 0.9.14 (2006-05-16)
-------------------------------------------------

 * Fixed broken OCSP requests.

 * Ignore invalid bytes appended to a certificate.


Noteworthy changes in version 0.9.13 (2005-11-24)